--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,26 @@
+/days23/
+/days01/
+/days02/
+/days03/
+/days04/
+/days05/
+/days06/
+/days07/
+/days08/
+/days09/
+/days10/
+/days11/
+/days12/
+/days13/
+/days14/
+/days15/
+/days16/
 /days17/
+/days18/
+/days19/
 /days20/
+/days21/
 /days22/
+/javaPro/
+/test/
 /util/
